--- a/day 1/exercise 1.ipynb
+++ b/day 1/exercise 1.ipynb
@@ -172,7 +172,7 @@
    "outputs": [],
    "source": [
     "# Export network\n",
-    "network.export_to_netcdf(\"results/network_c1.nc\")"
+    "network.export_to_netcdf(\"../results/network_c1.nc\")"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "outputs": [],
    "source": [
     "# Import check-point 1 network\n",
-    "network = pypsa.Network(\"results/network_c1.nc\")"
+    "network = pypsa.Network(\"../results/network_c1.nc\")"
    ]
   },
   {
@@ -342,7 +342,7 @@
    "outputs": [],
    "source": [
     "# Export network\n",
-    "network.export_to_netcdf(\"results/network_c2.nc\")"
+    "network.export_to_netcdf(\"../results/network_c2.nc\")"
    ]
   },
   {
@@ -364,7 +364,7 @@
    "outputs": [],
    "source": [
     "# Import check-point 2 network\n",
-    "network = pypsa.Network(\"results/network_c2.nc\")"
+    "network = pypsa.Network(\"../results/network_c2.nc\")"
    ]
   },
   {
@@ -381,7 +381,7 @@
    "outputs": [],
    "source": [
     "# Import an example daily pattern\n",
-    "solar_pattern = pd.read_csv(\"data/weather data/solar_daily_pattern.csv\")[\"daily pattern\"]\n",
+    "solar_pattern = pd.read_csv(\"../data/weather data/example_solar_daily_pattern.csv\")[\"daily pattern\"]\n",
     "# annual time-series availability of solar farm(just a simplified example)\n",
     "yearly_avail = pd.Series(list(solar_pattern) *365, index=network.snapshots)"
    ]
@@ -461,7 +461,7 @@
    "outputs": [],
    "source": [
     "# Exporting check-point 3 network\n",
-    "network.export_to_netcdf(\"results/network_c3.nc\")"
+    "network.export_to_netcdf(\"../results/network_c3.nc\")"
    ]
   }
  ],
