--- a/day 2/excercise_1_basic_green_h2_system_solution.ipynb
+++ b/day 2/excercise_1_basic_green_h2_system_solution.ipynb
@@ -28,12 +28,12 @@
     "*** \n",
     "Check-point 1:\n",
     "\n",
-    "**Build a network in PyPSA with one node (`bus`) named \"Utopia\" and following components to build a simple green hydrogen production system:**\n",
+    "**Build a network in PyPSA with two nodes (`bus`) and following components to build a simple green hydrogen production system:**\n",
     "\n",
-    "1. An `Utopia` bus with electricity as `carrier`.\n",
+    "1. An `Electricity` bus with electricity as `carrier`.\n",
     "   1. A wind generator inside this bus.\n",
     "   2. A load_shedding generator inside this bus.\n",
-    "2. An `Utopia` bus with hydrogen as `carrier`.\n",
+    "2. A `Hydrogen` bus with hydrogen as `carrier`.\n",
     "   1. A hydrogen demand load inside this bus.\n",
     "3. A electrolyser link to convert electricity into hydrogen.\n",
     "\n",
