--- a/day 2/excercise_1_basic_green_h2_system.ipynb
+++ b/day 2/excercise_1_basic_green_h2_system.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add an `Utopia` bus with electricity as `carrier`"
+    "Add an `electricity` bus with electricity as `carrier`"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add an `Utopia` bus with hydrogen as `carrier`"
+    "Add an `hydrogen` bus with hydrogen as `carrier`"
    ]
   },
   {
@@ -321,7 +321,7 @@
    "outputs": [],
    "source": [
     "# Export network\n",
-    "network.export_to_netcdf(\"../results/network_d2_e1.nc\")"
+    "network.export_to_netcdf(\"../results/network_d2_e1-1.nc\")"
    ]
   },
   {
@@ -341,7 +341,7 @@
    "outputs": [],
    "source": [
     "# Import check-point 1 network\n",
-    "network = pypsa.Network(\"../results/network_d2_e1.nc\")"
+    "network = pypsa.Network(\"../results/network_d2_e1-1.nc\")"
    ]
   },
   {
@@ -416,7 +416,7 @@
    "outputs": [],
    "source": [
     "# Exporting check-point 2 network\n",
-    "network.export_to_netcdf(\"../results/network_d2_e2.nc\")"
+    "network.export_to_netcdf(\"../results/network_d2_e1-2.nc\")"
    ]
   },
   {
