add exercise_3 in day 2

--- a/day 2/excercise_1_basic_green_h2_system.ipynb
+++ b/day 2/excercise_1_basic_green_h2_system.ipynb
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a electrolyser link, representing the electrolysis conversion with initial capacity of `20MW`, based on provided CAPEX, FOM, VOM, water_cost, efficiency, interest rate and lifetime.\n",
+    "Add a electrolyser link, representing the electrolysis conversion with initial capacity of `20MW`, based on provided CAPEX, FOM, VOM, efficiency, interest rate and lifetime.\n",
     "\n",
     "> **Source:** all costs for the example are taken from PyPSA\"s technology database (https://github.com/PyPSA/technology-data) and the assumptions in year 2023 in EU map of hydrogen production costs (https://public.flourish.studio/visualisation/16659363/), with exchange rate of `1.1USD/EUR`"
    ]
@@ -174,18 +174,12 @@
    "source": [
     "# Electrolyser techno-economic parameters are given as:\n",
     "eur_to_use = 1.1\n",
-    "lifetime = 12\n",
+    "lifetime = 10\n",
     "interest = 0.05\n",
-    "water_cost = 1.8 # EUR/m3, seawater\n",
-    "water_conversion_cost= 21 # kgH2O/kgH2\n",
     "\n",
     "CAPEX = 1590*eur_to_use # $/MW\n",
     "FOM = 32*eur_to_use  # $/MW fixed\n",
     "VOM = 0 # $/MWh variable\n",
-    "\n",
-    "# calculate marginal cost for water consumption (EUR/MWh)\n",
-    "# =water_cost*water_converstion_cost/(33.33(kWh)/1000)\n",
-    "water_cost = ((water_cost/1000)*water_conversion_cost)/(33.33/1000)*eur_to_use # 1kgH2 = 33.33kWh\n",
     "\n",
     "efficiency = 0.65"
    ]
@@ -360,7 +354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a solar generator at the electricity bus with a initial capacity of `10MW`, maximum capacity of `500MW`, and marginal cost of `0$/MWh` into the network? The name of the generator can be `solar`. "
+    "Add a solar generator at the electricity bus with a initial capacity of `50MW`, maximum capacity of `500MW`, and marginal cost of `0$/MWh` into the network? The name of the generator can be `solar`. "
    ]
   },
   {
@@ -406,6 +400,16 @@
    "outputs": [],
    "source": [
     "# Inspect the interaction of different power plants to supply loads\n",
+    "???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inspect the electrolysis conversion\n",
     "???"
    ]
   },
