--- a/day 2/excercise_2_hydrogen_storage.ipynb
+++ b/day 2/excercise_2_hydrogen_storage.ipynb
@@ -199,7 +199,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inspect the change of hydrogen_tank store to supply loads\n",
+    "# Inspect the change of energy capacity in hydrogen_tank store to supply loads\n",
+    "???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inspect the change of power capacity in hydrogen_tank store to supply loads\n",
     "???"
    ]
   },
