reform and add one more exercise for recap in day2

--- a/day 2/excercise_4_complete_green_h2_system.ipynb
+++ b/day 2/excercise_4_complete_green_h2_system.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "1. An `Electricity` bus with electricity as `carrier`.\n",
     "   1. A wind generator inside this bus.\n",
-    "   2. A load_shedding generator inside this bus.\n",
+    "   2. A solar generator inside this bus.\n",
     "2. A `Hydrogen` bus with hydrogen as `carrier`.\n",
     "   1. A hydrogen demand load inside this bus.\n",
     "3. A electrolyser link to convert electricity into hydrogen.\n",
@@ -423,7 +423,7 @@
    "outputs": [],
    "source": [
     "# Exporting check-point 1 network\n",
-    "network.export_to_netcdf(\"../results/network_d2_e3-1.nc\")"
+    "network.export_to_netcdf(\"../results/network_d2_e4-1.nc\")"
    ]
   },
   {
@@ -443,7 +443,7 @@
    "outputs": [],
    "source": [
     "# Import check-point 1 network\n",
-    "network = pypsa.Network(\"../results/network_d2_e3-1.nc\")"
+    "network = pypsa.Network(\"../results/network_d2_e4-1.nc\")"
    ]
   },
   {
@@ -645,7 +645,7 @@
    "outputs": [],
    "source": [
     "# Exporting check-point 2 network\n",
-    "network.export_to_netcdf(\"../results/network_d2_e3-2.nc\")"
+    "network.export_to_netcdf(\"../results/network_d2_e4-2.nc\")"
    ]
   },
   {
