--- a/day 2/excercise_2_basic_green_h2_system.ipynb
+++ b/day 2/excercise_2_basic_green_h2_system.ipynb
@@ -35,7 +35,7 @@
     "   2. A load_shedding generator inside this bus.\n",
     "2. A `Hydrogen` bus with hydrogen as `carrier`.\n",
     "   1. A hydrogen demand load inside this bus.\n",
-    "3. A electrolyser link to convert electricity into hydrogen.\n",
+    "3. An electrolyser link to convert electricity into hydrogen.\n",
     "\n",
     "**For simplicity, we assume the hydrogen demand profile to be flat for now. Afterwards, we want to supply electricy by attaching one renewable power plant implemented as (`generator`) (you have to call [`network.set_snapshots`](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/api_reference.html?highlight=set_snapshots) to select a year). As help you should have a look at the [PyPSA documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/index.html) and the [minimal lopf example](https://www.pypsa.org/examples/minimal_example_lopf.html), understand what the [components documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [LOPF documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/optimal_power_flow.html).**\n",
     "\n",
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add an `hydrogen` bus with hydrogen as `carrier`"
+    "Add a `hydrogen` bus with hydrogen as `carrier`"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a electrolyser link, representing the electrolysis conversion with initial capacity of `20MW`, based on provided CAPEX, FOM, VOM, efficiency, interest rate and lifetime.\n",
+    "Add an electrolyser link, representing the electrolysis conversion with initial capacity of `20MW`, based on provided CAPEX, FOM, VOM, efficiency, interest rate and lifetime.\n",
     "\n",
     "> **Source:** all costs for the example are taken from PyPSA\"s technology database (https://github.com/PyPSA/technology-data) and the assumptions in year 2023 in EU map of hydrogen production costs (https://public.flourish.studio/visualisation/16659363/), with exchange rate of `1.1USD/EUR`"
    ]
@@ -173,12 +173,12 @@
    "outputs": [],
    "source": [
     "# Electrolyser techno-economic parameters are given as:\n",
-    "eur_to_use = 1.1\n",
+    "eur_to_usd = 1.1\n",
     "lifetime = 10\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 1590*eur_to_use # $/MW\n",
-    "FOM = 32*eur_to_use  # $/MW fixed\n",
+    "CAPEX = 1590*eur_to_usd # $/MW\n",
+    "FOM = 32*eur_to_usd  # $/MW fixed\n",
     "VOM = 0 # $/MWh variable\n",
     "\n",
     "efficiency = 0.65"
