--- a/day 2/excercise_3_hydrogen_storage_solution.ipynb
+++ b/day 2/excercise_3_hydrogen_storage_solution.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "**Build a network in PyPSA with two nodes (`bus`) and following components to build a simple green hydrogen production system:**\n",
     "\n",
-    "1. An `Hydrogen` bus with hydrogen as `carrier`.\n",
+    "1. A `Hydrogen` bus with hydrogen as `carrier`.\n",
     "   1. A hydrogen demand load inside this bus.\n",
     "2. A `Hydrogen_storage` bus with hydrogen as `carrier`.\n",
     "   1. A hydrogen store inside this bus.\n",
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add an `hydrogen` bus with hydrogen as `carrier`"
+    "Add a `hydrogen` bus with hydrogen as `carrier`"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add an `hydrogen_storage` bus with hydrogen as `carrier`"
+    "Add an`hydrogen_storage` bus with hydrogen as `carrier`"
    ]
   },
   {
