--- a/day 2/excercise_1_basic_green_power_system_solution.ipynb
+++ b/day 2/excercise_1_basic_green_power_system_solution.ipynb
@@ -32,7 +32,7 @@
     "1. An `Electricity` bus with electricity as `carrier`.\n",
     "   1. A wind generator inside this bus.\n",
     "   2. A hydro generator inside this bus.\n",
-    "   3. A electricity demand load inside this bus.\n",
+    "   3. An electricity demand load inside this bus.\n",
     "\n",
     "**We will supply electricy by attaching one wind power plant implemented as (`generator`) (you have to call [`network.set_snapshots`](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/api_reference.html?highlight=set_snapshots) to select a year). As help you should have a look at the [PyPSA documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/index.html) and the [minimal lopf example](https://www.pypsa.org/examples/minimal_example_lopf.html), understand what the [components documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [LOPF documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/optimal_power_flow.html).**\n",
     "\n",
