--- a/day 2/excercise_4_complete_green_h2_system_solution.ipynb
+++ b/day 2/excercise_4_complete_green_h2_system_solution.ipynb
@@ -48,12 +48,12 @@
     "   2. A solar generator inside this bus.\n",
     "2. A `Hydrogen` bus with hydrogen as `carrier`.\n",
     "   1. A hydrogen demand load inside this bus.\n",
-    "3. A electrolyser link to convert electricity into hydrogen.\n",
+    "3. An electrolyser link to convert electricity into hydrogen.\n",
     "4. A `Hydrogen_storage` bus with hydrogen as `carrier`.\n",
     "   1. A hydrogen store inside this bus.\n",
     "5. A bidirection link to transfar the hydrogen between hydrogen and hydrogen storage buses.\n",
     "\n",
-    "**For simplicity, we assume the hydrogen demand profile to be flat for now. Afterwards, we want to supply electricy by attaching one renewable power plant implemented as (`generator`) (you have to call [`network.set_snapshots`](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/api_reference.html?highlight=set_snapshots) to select a year). As help you should have a look at the [PyPSA documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/index.html) and the [minimal lopf example](https://www.pypsa.org/examples/minimal_example_lopf.html), understand what the [components documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [LOPF documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/optimal_power_flow.html).**\n",
+    "**For simplicity, we assume the hydrogen demand profile to be flat for now. Afterwards, we want to supply electricy by attaching two renewable power plants implemented as (`generator`) (you have to call [`network.set_snapshots`](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/api_reference.html?highlight=set_snapshots) to select a year). As help you should have a look at the [PyPSA documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/index.html) and the [minimal lopf example](https://www.pypsa.org/examples/minimal_example_lopf.html), understand what the [components documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [LOPF documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/optimal_power_flow.html).**\n",
     "\n",
     "\n",
     "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters."
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add an `hydrogen` bus with hydrogen as `carrier`"
+    "Add a `hydrogen` bus with hydrogen as `carrier`"
    ]
   },
   {
@@ -178,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add an `hydrogen_storage` bus with hydrogen as `carrier`"
+    "Add a `hydrogen_storage` bus with hydrogen as `carrier`"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add constant hourly hydrogen load of `100MW` at the hydrogen bus. The name of the load can be `hydroge_load`"
+    "Add a constant hourly hydrogen load of `100MW` at the hydrogen bus. The name of the load can be `hydroge_load`"
    ]
   },
   {
@@ -471,12 +471,12 @@
    "outputs": [],
    "source": [
     "# Onshore Wind's techno-economic parameters are given as:\n",
-    "eur_to_use = 1.1\n",
+    "eur_to_usd = 1.1\n",
     "lifetime = 25\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 1420*eur_to_use # $/MW\n",
-    "FOM = 28*eur_to_use  # $/MW fixed\n",
+    "CAPEX = 1420*eur_to_usd # $/MW\n",
+    "FOM = 28*eur_to_usd  # $/MW fixed\n",
     "VOM = 0 # $/MWh variable\n",
     "\n",
     "efficiency = 1"
@@ -726,7 +726,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a electrolyser link, representing the electrolysis conversion with initial capacity of `20MW`, based on provided CAPEX, FOM, VOM, efficiency, interest rate and lifetime.\n",
+    "Add an electrolyser link, representing the electrolysis conversion with initial capacity of `20MW`, based on provided CAPEX, FOM, VOM, efficiency, interest rate and lifetime.\n",
     "\n",
     "> **Source:** all costs for the example are taken from PyPSA\"s technology database (https://github.com/PyPSA/technology-data) and the assumptions in year 2023 in EU map of hydrogen production costs (https://public.flourish.studio/visualisation/16659363/), with exchange rate of `1.1USD/EUR`"
    ]
@@ -738,12 +738,12 @@
    "outputs": [],
    "source": [
     "# Electrolyser's techno-economic parameters are given as:\n",
-    "eur_to_use = 1.1\n",
+    "eur_to_usd = 1.1\n",
     "lifetime = 10\n",
     "interest = 0.05\n",
     "\n",
-    "CAPEX = 1590*eur_to_use # $/MW\n",
-    "FOM = 32*eur_to_use  # $/MW fixed\n",
+    "CAPEX = 1590*eur_to_usd # $/MW\n",
+    "FOM = 32*eur_to_usd  # $/MW fixed\n",
     "VOM = 0 # $/MWh variable\n",
     "efficiency = 0.65"
    ]
@@ -1717,7 +1717,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add hourly hydrogen load at the hydrogen bus according to the daily pattern of industrial hydrogen demand (`100MW per hour` from 1am to 7pm, and with a shutodwn of 5 hours). The name of the load can be `hydroge_load`\n",
+    "Add a hourly hydrogen load at the hydrogen bus according to the daily pattern of industrial hydrogen demand (`100MW per hour` from 1am to 7pm, and with a shutodwn of 5 hours). The name of the load can be `hydroge_load`\n",
     "\n",
     "**To set hourly hydrogen demand, you have to call [`network.set_snapshots`](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/api_reference.html?highlight=set_snapshots) to select a year). As help you should have a look at the [PyPSA documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/index.html) and the [minimal lopf example](https://www.pypsa.org/examples/minimal_example_lopf.html), understand what the [components documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [LOPF documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/optimal_power_flow.html).**"
    ]
@@ -1752,7 +1752,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a electrolyser link including compressor, representing the electrolysis conversion with initial capacity of `20MW`, based on provided CAPEX, FOM, VOM, water_cost, efficiency, interest rate and lifetime.\n",
+    "Add an electrolyser link including compressor, representing the electrolysis conversion with initial capacity of `20MW`, based on provided CAPEX, FOM, VOM, water_cost, efficiency, interest rate and lifetime.\n",
     "\n",
     "> **Source:** all costs for the example are taken from PyPSA\"s technology database (https://github.com/PyPSA/technology-data) and the assumptions in year 2023 in EU map of hydrogen production costs (https://public.flourish.studio/visualisation/16659363/), with exchange rate of `1.1USD/EUR`"
    ]
@@ -1764,19 +1764,19 @@
    "outputs": [],
    "source": [
     "# Electrolyser's techno-economic parameters are given as:\n",
-    "eur_to_use = 1.1\n",
+    "eur_to_usd = 1.1\n",
     "lifetime = 10\n",
     "interest = 0.05\n",
     "water_cost = 1.8 # EUR/m3, seawater\n",
     "water_conversion_cost= 21 # kgH2O/kgH2\n",
     "\n",
-    "CAPEX = 1590*eur_to_use # $/MW\n",
-    "FOM = 32*eur_to_use  # $/MW fixed\n",
+    "CAPEX = 1590*eur_to_usd # $/MW\n",
+    "FOM = 32*eur_to_usd  # $/MW fixed\n",
     "VOM = 0 # $/MWh variable\n",
     "\n",
     "# calculate marginal cost for water consumption (EUR/MWh)\n",
     "# =water_cost*water_converstion_cost/(33.33(kWh)/1000)\n",
-    "water_cost = ((water_cost/1000)*water_conversion_cost)/(33.33/1000)*eur_to_use # 1kgH2 = 33.33kWh\n",
+    "water_cost = ((water_cost/1000)*water_conversion_cost)/(33.33/1000)*eur_to_usd # 1kgH2 = 33.33kWh\n",
     "\n",
     "efficiency = 0.65\n",
     "\n",
@@ -1790,8 +1790,8 @@
     "\n",
     "# Compressor's techno-economic parameters are given as:\n",
     "lifetime_com = 25\n",
-    "CAPEX_COM = 1720*eur_to_use # $/MW\n",
-    "FOM_COM = 34*eur_to_use  # $/MW fixed\n",
+    "CAPEX_COM = 1720*eur_to_usd # $/MW\n",
+    "FOM_COM = 34*eur_to_usd  # $/MW fixed\n",
     "VOM_COM = 0 # $/MWh variable"
    ]
   },
