change exercise names

--- a/day 1/exercise_1_copper_plate_power_system.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system.ipynb
@@ -172,7 +172,7 @@
    "outputs": [],
    "source": [
     "# Export network\n",
-    "network.export_to_netcdf(\"../results/network_c1.nc\")"
+    "network.export_to_netcdf(\"../results/network_d1_e1-1.nc\")"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "outputs": [],
    "source": [
     "# Import check-point 1 network\n",
-    "network = pypsa.Network(\"../results/network_c1.nc\")"
+    "network = pypsa.Network(\"../results/network_d1_e1-1.nc\")"
    ]
   },
   {
@@ -342,7 +342,7 @@
    "outputs": [],
    "source": [
     "# Export network\n",
-    "network.export_to_netcdf(\"../results/network_c2.nc\")"
+    "network.export_to_netcdf(\"../results/network_d1_e1-2.nc\")"
    ]
   },
   {
@@ -354,7 +354,7 @@
     "\n",
     "**Add a VRE power plant to the network: Solar PV with extendable capacity.** \n",
     "\n",
-    "**Hint:** Solar PV can only provide electricity during day time and its generation pattern depends on solar irradiation**"
+    "**Hint:** Solar PV can only provide electricity during day time and its generation pattern depends on solar irradiation."
    ]
   },
   {
@@ -364,7 +364,7 @@
    "outputs": [],
    "source": [
     "# Import check-point 2 network\n",
-    "network = pypsa.Network(\"../results/network_c2.nc\")"
+    "network = pypsa.Network(\"../results/network_d1_e1-2.nc\")"
    ]
   },
   {
@@ -461,7 +461,7 @@
    "outputs": [],
    "source": [
     "# Exporting check-point 3 network\n",
-    "network.export_to_netcdf(\"../results/network_c3.nc\")"
+    "network.export_to_netcdf(\"../results/network_d1_e1-3.nc\")"
    ]
   }
  ],
