switch to repo environment

--- a/day 1/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system_solution.ipynb
@@ -3314,7 +3314,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-agora",
+   "display_name": "pypsa-agora-h2",
    "language": "python",
    "name": "python3"
   },
