correct naming convention

--- a/day 1/exercise_1_copper_plate_power_system.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system.ipynb
@@ -418,7 +418,7 @@
     "\n",
     "network.add(\n",
     "    class_name=\"Generator\",\n",
-    "    name=\"Solar_farm\",\n",
+    "    name=\"solar_farm\",\n",
     "    bus=???,\n",
     "    marginal_cost=???,\n",
     "    capital_cost=???,\n",
