--- a/day 1/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system_solution.ipynb
@@ -2573,7 +2573,7 @@
     "\n",
     "network.add(\n",
     "    class_name=\"Generator\",\n",
-    "    name=\"Solar_farm\",\n",
+    "    name=\"solar_farm\",\n",
     "    bus='electricity',\n",
     "    marginal_cost=VOM,\n",
     "    capital_cost=annualized_capex,\n",
@@ -2754,7 +2754,7 @@
    ],
    "source": [
     "gen = network.generators_t.p\n",
-    "gen[['Solar_farm', 'gas_power_plant']].head(50).plot(kind='area', stacked=True)"
+    "gen[['solar_farm', 'gas_power_plant']].head(50).plot(kind='area', stacked=True)"
    ]
   },
   {
