--- a/day 2/excercise_2_basic_green_h2_system.ipynb
+++ b/day 2/excercise_2_basic_green_h2_system.ipynb
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add constant hourly hydrogen load of `100MW` at the hydrogen bus. The name of the load can be `hydroge_load`"
+    "Add a constant hourly hydrogen load of `100MW` at the hydrogen bus. The name of the load can be `hydrogen_load`"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a wind generator at the electricity bus with a initial capacity of `100MW`, maximum capacity of `500MW`, and marginal cost of `0$/MWh` into the network? The name of the generator can be `onshore_wind`. "
+    "Add a wind generator at the electricity bus with a initial capacity of `100MW`, maximum capacity of `500MW`, and marginal cost of `0$/MWh` into the network. The name of the generator can be `onshore_wind`. "
    ]
   },
   {
