--- a/day 2/excercise_3_hydrogen_storage.ipynb
+++ b/day 2/excercise_3_hydrogen_storage.ipynb
@@ -34,10 +34,10 @@
     "   1. A hydrogen demand load inside this bus.\n",
     "2. A `Hydrogen_storage` bus with hydrogen as `carrier`.\n",
     "   1. A hydrogen store inside this bus.\n",
-    "3. A bidirection link to transfar the hydrogen between hydrogen and hydrogen storage buses.\n",
+    "3. A bidirectional link to transfar the hydrogen between hydrogen and hydrogen storage buses.\n",
     "\n",
     "\n",
-    "**For simplicity, we assume the hydrogen demand profile to be flat for now. As help you should have a look at the [PyPSA documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/index.html) and the [minimal lopf example](https://www.pypsa.org/examples/minimal_example_lopf.html), understand what the [components documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [LOPF documentation](https://pypsa-readthedocs.readthedocs.io/en/readthedocs/optimal_power_flow.html).**\n",
+    "**For simplicity, we assume the hydrogen demand profile to be flat for now. For help, you should have a look at the [PyPSA documentation](https://pypsa.readthedocs.io/en/latest/index.html#documentation) and the [optimzation with Linopy](https://pypsa.readthedocs.io/en/latest/examples/optimization-with-linopy.html), understand what the [components documentation](https://pypsa.readthedocs.io/en/latest/user-guide/components.html) of PyPSA gives you and that you can find the underlying objective function and constraints in the [System Optimization documentation](https://pypsa.readthedocs.io/en/latest/user-guide/optimal-power-flow.html).**\n",
     "\n",
     "\n",
     "> **Remarks:** For time reasons, you do not have to build the network from scratch. However, to get you acquainted with PyPSA we have omitted a few elements or some of the parameters of the network marked by three question marks `???`. Either, you have to add an element similar to the one in the box above or add a few parameters."
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add constant hourly hydrogen load of `10MW` at the hydrogen bus. The name of the load can be `hydroge_load`"
+    "Add constant hourly hydrogen load of `10MW` at the hydrogen bus. The name of the load can be `hydrogen_load`"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a bidirectional link, representing the hydrogen charging and discharging between hydrogen and hydrogen_storage with marginal cost of `0$/MWh` into the network? The name of the link can be `hydrogen_flow`. "
+    "Add a bidirectional link, representing the hydrogen charging and discharging between hydrogen and hydrogen_storage with marginal cost of `0$/MWh` into the network. The name of the link can be `hydrogen_flow`. "
    ]
   },
   {
