--- a/day 2/excercise_1_basic_green_power_system.ipynb
+++ b/day 2/excercise_1_basic_green_power_system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,27 +59,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set snapshots to the year 2023 and at hourly resolution\n",
-    "snapshots = pd.date_range(???, ???, freq=???, inclusive=???)\n",
+    "snapshots = pd.date_range('2023-01-01', '2024-01-01', freq='H', inclusive='left')\n",
     "network.set_snapshots(snapshots)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2023-01-01 00:00:00', '2023-01-01 01:00:00',\n",
+       "               '2023-01-01 02:00:00', '2023-01-01 03:00:00',\n",
+       "               '2023-01-01 04:00:00', '2023-01-01 05:00:00',\n",
+       "               '2023-01-01 06:00:00', '2023-01-01 07:00:00',\n",
+       "               '2023-01-01 08:00:00', '2023-01-01 09:00:00',\n",
+       "               ...\n",
+       "               '2023-12-31 14:00:00', '2023-12-31 15:00:00',\n",
+       "               '2023-12-31 16:00:00', '2023-12-31 17:00:00',\n",
+       "               '2023-12-31 18:00:00', '2023-12-31 19:00:00',\n",
+       "               '2023-12-31 20:00:00', '2023-12-31 21:00:00',\n",
+       "               '2023-12-31 22:00:00', '2023-12-31 23:00:00'],\n",
+       "              dtype='datetime64[ns]', name='snapshot', length=8760, freq='H')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "network.snapshots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "???"
+    "network.add(class_name=???, name=\"electricity\", carrier=???)"
    ]
   },
   {
@@ -231,7 +253,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.10 ('pypsa-agora')",
+   "display_name": "pypsa-agora-lcoh",
    "language": "python",
    "name": "python3"
   },
@@ -245,14 +267,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.10.8"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "d33265b03f0fd43aaae402ef36c78c0dc6832657a131e746ad77efa446788bb3"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
