add insturctions on exercise 3 for speedup

--- a/day 2/excercise_3_complete_green_h2_system.ipynb
+++ b/day 2/excercise_3_complete_green_h2_system.ipynb
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "???"
+    "network.add(class_name=\"Bus\", name=\"electricity\", carrier=???)"
    ]
   },
   {
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "???"
+    "network.add(class_name=\"Bus\", name=???, carrier=???)"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "???"
+    "network.add(class_name=\"Bus\", name=??? carrier=???)"
    ]
   },
   {
