adjust exercises in day2

--- a/day 2/excercise_2_hydrogen_storage.ipynb
+++ b/day 2/excercise_2_hydrogen_storage.ipynb
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "???"
+    "network.add(class_name=???, name=\"hydrogen_load\", bus=???, p_set=???)"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(pyomo=False, solver_name=solver)"
    ]
   },
   {
