--- a/day 2/excercise_2_hydrogen_storage_solution.ipynb
+++ b/day 2/excercise_2_hydrogen_storage_solution.ipynb
@@ -233,7 +233,7 @@
    ],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(pyomo=False, solver_name=solver)"
    ]
   },
   {
