--- a/day 2/excercise_3_complete_green_h2_system.ipynb
+++ b/day 2/excercise_3_complete_green_h2_system.ipynb
@@ -81,7 +81,7 @@
    "outputs": [],
    "source": [
     "# Set snapshots to the year 2023 and at hourly resolution\n",
-    "snapshots = pd.date_range(???, ???, freq=???, inclusive=???)\n",
+    "snapshots = pd.date_range(???)\n",
     "network.set_snapshots(snapshots)"
    ]
   },
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.add(class_name=\"Bus\", name=\"electricity\", carrier=???)"
+    "???"
    ]
   },
   {
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.add(class_name=\"Bus\", name=???, carrier=???)"
+    "???"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.add(class_name=\"Bus\", name=??? carrier=???)"
+    "???"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.add(class_name=???, name=\"hydrogen_load\", bus=???, p_set=???)"
+    "???"
    ]
   },
   {
@@ -200,8 +200,8 @@
     "      name=\"hydrogen_tank\",\n",
     "      bus=???,\n",
     "      carrier=???,\n",
-    "      e_nom_extendable=True,\n",
-    "      e_cyclic=True,\n",
+    "      e_nom_extendable=???,\n",
+    "      e_cyclic=???,\n",
     "      ???=0, #$/MWh\n",
     ")"
    ]
@@ -224,10 +224,10 @@
     "      name=\"hydrogen_flow\",\n",
     "      bus0=???,\n",
     "      bus1=???,\n",
-    "      p_nom_extendable=True,\n",
+    "      p_nom_extendable=???,\n",
     "      ???=0, #$/MWh\n",
     "      efficiency=1,\n",
-    "      p_min_pu=-1\n",
+    "      p_min_pu=???\n",
     ")"
    ]
   },
@@ -267,11 +267,11 @@
     "annualized_capex = calculate_annualised_capex(CAPEX, interest, lifetime)\n",
     "\n",
     "network.add(\n",
-    "    class_name=\"Generator\", \n",
+    "    class_name=???, \n",
     "    name=\"onshore_wind\",\n",
-    "    bus=\"electricity\",\n",
-    "    carrier=\"electricity\",\n",
-    "    p_nom_extendable=True,\n",
+    "    bus=???,\n",
+    "    carrier=???,\n",
+    "    p_nom_extendable=???,\n",
     "    ???=100, # MW\n",
     "    ???=500, # MW\n",
     "    capital_cost=???, #$/MW\n",
@@ -318,18 +318,7 @@
     "annualized_capex = calculate_annualised_capex(CAPEX, interest, lifetime)\n",
     "\n",
     "network.add(\n",
-    "    class_name=\"Generator\", \n",
-    "    name=\"solar\",\n",
-    "    bus=\"electricity\",\n",
-    "    carrier=\"electricity\",\n",
-    "    p_nom_extendable=True,\n",
-    "    ???=50,\n",
-    "    ???=500, # MW\n",
-    "    capital_cost=???, #$/MW\n",
-    "    marginal_cost=???, #$/MWh\n",
-    "    efficiency=efficiency,\n",
-    "    lifetime=lifetime,\n",
-    "    p_max_pu=solar_profile\n",
+    "    ???\n",
     ")"
    ]
   },
@@ -370,9 +359,9 @@
     "network.add(\n",
     "    class_name=\"Link\",\n",
     "    name=\"electrolyser\",\n",
-    "    bus0=\"electricity\",\n",
-    "    bus1=\"hydrogen\",\n",
-    "    p_nom_extendable=True,\n",
+    "    bus0=???,\n",
+    "    bus1=???,\n",
+    "    p_nom_extendable=???,\n",
     "    ???=20,\n",
     "    capital_cost=???, #$/MW\n",
     "    marginal_cost=???, #$/MWh\n",
@@ -395,7 +384,7 @@
    "outputs": [],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(pyomo=False, solver_name=solver)"
    ]
   },
   {
@@ -492,8 +481,8 @@
    "outputs": [],
    "source": [
     "network.add(\n",
-    "    class_name=\"Load\", \n",
-    "    name=\"hydrogen_load\", \n",
+    "    class_name=???,\n",
+    "    name=???,\n",
     "    bus=???, \n",
     "    p_set=load_profile\n",
     ")"
@@ -556,11 +545,11 @@
     "annualized_capex_com = calculate_annualised_capex(CAPEX_COM, interest, lifetime_com)\n",
     "\n",
     "network.add(\n",
-    "    class_name=\"Link\",\n",
-    "    name=\"electrolyser\",\n",
-    "    bus0=\"electricity\",\n",
-    "    bus1=\"hydrogen\",\n",
-    "    p_nom_extendable=True,\n",
+    "    class_name=???,\n",
+    "    name=???,\n",
+    "    bus0=???,\n",
+    "    bus1=???,\n",
+    "    p_nom_extendable=???,\n",
     "    ???=20,\n",
     "    capital_cost=???, #$/MW\n",
     "    marginal_cost=???, #$/MWh\n",
@@ -583,7 +572,7 @@
    "outputs": [],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(pyomo=False, solver_name=solver)"
    ]
   },
   {
