--- a/day 2/excercise_3_complete_green_h2_system_solution.ipynb
+++ b/day 2/excercise_3_complete_green_h2_system_solution.ipynb
@@ -905,7 +905,7 @@
    ],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(pyomo=False, solver_name=solver)"
    ]
   },
   {
@@ -1952,7 +1952,7 @@
    ],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(pyomo=False, solver_name=solver)"
    ]
   },
   {
