--- a/day 2/excercise_1_basic_green_h2_system.ipynb
+++ b/day 2/excercise_1_basic_green_h2_system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,11 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "???"
+    "network.add(class_name=\"Bus\", name=\"electricity\", carrier=???)"
    ]
   },
   {
@@ -108,11 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "???"
+    "network.add(class_name=\"Bus\", name=\"hydrogen\", carrier=???)"
    ]
   },
   {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
    "outputs": [],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(pyomo=False, solver_name=solver)"
    ]
   },
   {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
    "outputs": [],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(pyomo=False, solver_name=solver)"
    ]
   },
   {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
    "outputs": [],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(pyomo=False, solver_name=solver)"
    ]
   },
   {
@@ -433,7 +433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.10 ('pypsa-agora')",
+   "display_name": "Python 3.11.9 ('pypsa-agora-lcoh')",
    "language": "python",
    "name": "python3"
   },
@@ -447,12 +447,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d33265b03f0fd43aaae402ef36c78c0dc6832657a131e746ad77efa446788bb3"
+    "hash": "580530e56f3c2d183b3e28b3ec4775eb690fc2d470a00ed7433ed88162927d95"
    }
   }
  },
