--- a/day 2/excercise_1_basic_green_h2_system_solution.ipynb
+++ b/day 2/excercise_1_basic_green_h2_system_solution.ipynb
@@ -592,7 +592,7 @@
    ],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(pyomo=False, solver_name=solver)"
    ]
   },
   {
@@ -690,7 +690,7 @@
    ],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(pyomo=False, solver_name=solver)"
    ]
   },
   {
@@ -1857,7 +1857,7 @@
    ],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(pyomo=False, solver_name=solver)"
    ]
   },
   {
@@ -2491,7 +2491,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-agora-lcoh",
+   "display_name": "Python 3.11.10 ('pypsa-agora')",
    "language": "python",
    "name": "python3"
   },
@@ -2505,9 +2505,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.10"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d33265b03f0fd43aaae402ef36c78c0dc6832657a131e746ad77efa446788bb3"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
