update notebook kernell

--- a/day 1/exercise_1_copper_plate_power_system.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system.ipynb
@@ -139,7 +139,7 @@
    "outputs": [],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(solver_name=solver)"
    ]
   },
   {
@@ -316,7 +316,7 @@
    "outputs": [],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(solver_name=solver)"
    ]
   },
   {
@@ -441,7 +441,7 @@
    "outputs": [],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(solver_name=solver)"
    ]
   },
   {
