--- a/day 1/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system_solution.ipynb
@@ -375,7 +375,7 @@
    ],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(solver_name=solver)"
    ]
   },
   {
@@ -1780,7 +1780,7 @@
    ],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(solver_name=solver)"
    ]
   },
   {
@@ -2698,7 +2698,7 @@
    ],
    "source": [
     "# Solve network using cbc solver\n",
-    "network.optimize(pyomo=False, solver_name=\"cbc\")"
+    "network.optimize(solver_name=solver)"
    ]
   },
   {
