--- a/day 1/exercise_2_adding_storage_units.ipynb
+++ b/day 1/exercise_2_adding_storage_units.ipynb
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "# Solve network using cbc solver\n",
-    "n.optimize(pyomo=False, solver_name=\"cbc\")"
+    "n.optimize(solver_name=solver)"
    ]
   },
   {
@@ -252,7 +252,7 @@
    "outputs": [],
    "source": [
     "# Solve network again\n",
-    "n.optimize(pyomo=False, solver_name=\"cbc\")"
+    "n.optimize(solver_name=solver)"
    ]
   },
   {
@@ -328,7 +328,7 @@
    "outputs": [],
    "source": [
     "# Solve network again\n",
-    "n.optimize(pyomo=False, solver_name=\"cbc\")"
+    "n.optimize(solver_name=solver)"
    ]
   },
   {
