--- a/day 1/exercise_2_adding_storage_units_solution.ipynb
+++ b/day 1/exercise_2_adding_storage_units_solution.ipynb
@@ -639,7 +639,7 @@
    ],
    "source": [
     "# Solve network using cbc solver\n",
-    "n.optimize(pyomo=False, solver_name=\"cbc\")"
+    "n.optimize(solver_name=solver)"
    ]
   },
   {
@@ -1511,7 +1511,7 @@
    ],
    "source": [
     "# Solve network again\n",
-    "n.optimize(pyomo=False, solver_name=\"cbc\")"
+    "n.optimize(solver_name=solver)"
    ]
   },
   {
@@ -2084,7 +2084,7 @@
    ],
    "source": [
     "# Solve network again\n",
-    "n.optimize(pyomo=False, solver_name=\"cbc\")"
+    "n.optimize(solver_name=solver)"
    ]
   },
   {
@@ -2186,7 +2186,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pypsa-agora",
+   "display_name": "pypsa-agora-h2",
    "language": "python",
    "name": "python3"
   },
