modify the documentation of the first gas-fired power plant

--- a/day 1/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system_solution.ipynb
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a gas generator at the electricity bus with a capacity of 200MW and marginal cost of 20$/MWh to the network?"
+    "Add a gas-fired power plant at the electricity bus with a capacity of `200MW` and marginal cost of `20$/MWh` to the network."
    ]
   },
   {
@@ -133,14 +133,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating gas-fired powerplant\n",
+    "# Creating a gas-fired power plant\n",
     "network.add(\n",
     "    class_name=\"Generator\",\n",
     "    name=\"gas_power_plant\",\n",
     "    bus='electricity',\n",
     "    carrier=\"gas\",\n",
-    "    p_nom=200,\n",
-    "    marginal_cost=20,  # marginal cost of gas-fired power plant ($/MWh)\n",
+    "    p_nom=200, # unit: MW\n",
+    "    marginal_cost=20,  # unit: $/MWh\n",
     ")\n"
    ]
   },
