add the link to the results interpretation in readthedocs

--- a/day 1/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system_solution.ipynb
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets look at some results! Back to read the docs. How would you look at results?"
+    "Lets look at some results! Back to [readthedocs](https://pypsa.readthedocs.io/en/latest/user-guide/components.html#network). How would you look at results?"
    ]
   },
   {
