update the check-point 2 description

--- a/day 1/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system_solution.ipynb
@@ -210,7 +210,7 @@
     "***\n",
     "Check-point 2:\n",
     "\n",
-    "**Remove the generator from the previous exercise and replace it with two actual power plants: one nuclear and one gas-fired. The annualized capital costs and marginal costs for these plants should be calculated using the provided input parameters. Instead of setting the plant capacities exogenously, allow the model to determine the optimal capacities based on the LOPF.**"
+    "**Remove the generator from the previous exercise and replace it with two actual power plants: one nuclear and one gas-fired. The annualized capital costs and marginal costs for these plants should be calculated using the provided input parameters. Instead of setting the plant capacities exogenously, allow the model to determine the optimal capacities based on the linear optimization problem with power flow (LOPF).**"
    ]
   },
   {
