improve the comments on the nuclear power plant specifications

--- a/day 1/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system_solution.ipynb
@@ -262,9 +262,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add a nuclear powerplant to your network based on provided CAPEX, FOM, VOM, fuel_cost, efficiency, interest rate and lifetime.\n",
+    "Add a nuclear power plant to your network based on the provided capital expenditure (CAPEX), fixed operation & maintenance cost (FOM), variable operation & maintenance cost (VOM), fuel cost, efficiency, interest rate and lifetime.\n",
     "\n",
-    "> **Source:** all costs for the example are taken from PyPSA's technology database (https://github.com/PyPSA/technology-data)"
+    "> **Source:** all costs for the example are taken from PyPSA's technology database (https://github.com/PyPSA/technology-data/blob/master/outputs/costs_2025.csv)"
    ]
   },
   {
@@ -273,13 +273,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Nuclear power plant techno-economic parameters are given as:\n",
-    "lifetime = 40\n",
-    "interest = 0.05\n",
+    "# Nuclear power plant with the following techno-economic parameters:\n",
+    "lifetime = 40 # years\n",
+    "interest = 0.05 # unit: -\n",
     "CAPEX = 9453549 # $/MW\n",
-    "FOM = 120060  # $/MW fixed\n",
-    "VOM = 3.9 # $/MWh variable\n",
-    "fuel_cost = 3.75 # $/MWhth per unit Uranium consumed\n",
+    "FOM = 120060  # $/MW per year\n",
+    "VOM = 3.9 # $/MWh\n",
+    "fuel_cost = 3.75 # $/MWh_th per unit Uranium consumed\n",
     "efficiency = 0.326"
    ]
   },
