hide the URL of the pypsa's technology database

--- a/day 1/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system_solution.ipynb
@@ -264,7 +264,7 @@
    "source": [
     "Add a nuclear power plant to your network based on the provided capital expenditure (CAPEX), fixed operation & maintenance cost (FOM), variable operation & maintenance cost (VOM), fuel cost, efficiency, interest rate and lifetime.\n",
     "\n",
-    "> **Source:** all costs for the example are taken from PyPSA's technology database (https://github.com/PyPSA/technology-data/blob/master/outputs/costs_2025.csv)"
+    "> **Source:** all costs for the example are taken from [PyPSA's technology database](https://github.com/PyPSA/technology-data/blob/master/outputs/costs_2025.csv)."
    ]
   },
   {
