update the techno-economic parameters of the nuclear power plant based on the cited source

--- a/day 1/exercise_1_copper_plate_power_system_solution.ipynb
+++ b/day 1/exercise_1_copper_plate_power_system_solution.ipynb
@@ -276,10 +276,10 @@
     "# Nuclear power plant with the following techno-economic parameters:\n",
     "lifetime = 40 # years\n",
     "interest = 0.05 # unit: -\n",
-    "CAPEX = 9453549 # $/MW\n",
-    "FOM = 120060  # $/MW per year\n",
-    "VOM = 3.9 # $/MWh\n",
-    "fuel_cost = 3.75 # $/MWh_th per unit Uranium consumed\n",
+    "CAPEX = 8594135 # $/MW\n",
+    "FOM = 0.0127 * CAPEX  # $/MW per year (1.27% of CAPEX)\n",
+    "VOM = 3.55 # $/MWh\n",
+    "fuel_cost = 3.41 # $/MWh_th per unit Uranium consumed\n",
     "efficiency = 0.326"
    ]
   },
